fixing horizontal scroll

--- a/_sass/elementaire/_base.scss
+++ b/_sass/elementaire/_base.scss
@@ -24,7 +24,12 @@
            font-feature-settings: "kern" 1;
    font-kerning: normal;
    min-height: 100vh;
-   width: 100vw;
+   max-width: 100%;
+   overflow-x: hidden;
+ }
+
+ html {
+   max-width: 100%;
    overflow-x: hidden;
  }
  
